# OpenColor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  index.html  loupe.html  package.json  picker.html  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/: RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md
.github/workflows/: ci.yml  release.yml
screenshots/: README.md
scripts/: screenshots.py
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  palette.rs  picker.rs  platform.rs  shell.rs  storage.rs
src/components/: ColorCard.tsx  ColorConfirm.tsx  ColorEditor.tsx  ColorGrid.tsx  ConfirmDialog.tsx  ExportDialog.tsx  HslPicker.tsx  ImageImportDialog.tsx  PaletteCard.tsx  PermissionBanner.tsx  PromptDialog.tsx  SettingsView.tsx  Toolbar.tsx
src/i18n/: en.json  index.ts  zh-CN.json
src/lib/: clipboard.ts  demoData.ts  export.ts  format.test.ts  format.ts  quantize.ts  reorder.test.ts  reorder.ts  tauri.ts
