[package]
name = "opencolor"
version = "0.1.0"
description = "OpenColor — a lightweight cross-platform color picker for VibeCoding"
authors = ["Freakz2z <freak050321@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "opencolor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.9"
image = { version = "0.25", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
log = "0.4"
parking_lot = "0.12"
mouse_position = "0.1"
rdev = { version = "0.5", default-features = false }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
